# kongman

./: .flake8  .gitignore  .gitmodules  Makefile  README.md  dc_and_examples  make_dc_and_examples  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
dev/: requirements-dev.txt
examples/: apply_examples  mockbin.yaml
kong/: __init__.py  acls.py  certificates.py  cli.py  client.py  components.py  consumers.py  plugins.py  routes.py  services.py  snis.py
tests/: conftest.py  test_cli.py  test_kong.py  test_plugins.py
