[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = __pycache__,.egg-info,.venvs,dist,build

[tool:pytest]
norecursedirs = dist build

[mypy]
ignore_missing_imports = True
disallow_untyped_calls = False
warn_return_any = False
disallow_untyped_defs = True
warn_no_return = True
